// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pill/> render with default/required props 1`] = `
<span
  className="pill"
  data-cy=""
>
  {{label}}
</span>
`;

exports[`<Pill/> render with optional props [::data-cy] as "{{data-cy}}" 1`] = `
<span
  className="pill"
  data-cy="{{data-cy}}"
>
  {{label}}
</span>
`;

exports[`<Pill/> render with optional props [::data-id] as "{{data-id}}" 1`] = `
<span
  className="pill"
  data-cy=""
>
  {{label}}
  <button
    className="pill__control"
    data-cy="-remove"
    data-id="{{data-id}}"
  >
    ×
  </button>
</span>
`;
